--- a/settings.gradle
+++ b/settings.gradle
@@ -16,4 +16,4 @@ include 'api'
 include 'services:webservice'
 */
 
-rootProject.name = 'BakeoutController'
+rootProject.name = 'BakeoutController-Basic'
