--- a/build.gradle
+++ b/build.gradle
@@ -63,7 +63,10 @@ dependencies {
 
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:1.7.13'
-    
+    compile group: 'ch.qos.logback', name: 'logback-core', version: '1.1.10'
+    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.1.10'
+
+
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
     // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
