--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     compile group: 'org.jetbrains', name: 'annotations', version: '13.0'
 
     // MODBUS communication library for talking with the PVCi pressure gauge
-    compile "net.wimpi:jamod:1.2"
+    compile 'com.ghgande:j2mod:2.3.2'
 
     // Spring Boot
     compile "org.springframework.boot:spring-boot-starter-web:1.4.3.RELEASE"
