--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ cache:
 
 before_install:
     - "export DISPLAY=:99.0"
-    - "sh -e /etc/init.d/xvfb start"
+    - "xvfb -screen 99 1920x1080x32"
     - pip install --user codecov
 
 before_script:
